--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 
 .container__main{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   height: 100%;
   padding: 1rem;
 }
