hook useLocalStorage implemented

--- a/src/components/ShoppingCart/ShoppingCart.css
+++ b/src/components/ShoppingCart/ShoppingCart.css
@@ -37,13 +37,26 @@
   border-bottom: 1px solid #ccc;
 }
 
+.cartItem__info {
+  flex: 3;
+  flex-wrap: wrap;
+}
+
 .cartItem__buttons{
-display: flex;
-align-items: center;
+  flex: 2;
+}
+
+.cartItem__buttons {
+  display: flex;
+  flex: 2;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .cartItem__imageBox {
   padding: 1rem;
+  flex: 2;
 }
 .cartItem__imageBox img {
   width: 150px;
@@ -63,9 +76,9 @@ align-items: center;
   font-size: 1.2rem;
 }
 
-.cartItem__button{
-  width: 2rem;
-  height: 2rem;
+.cartItem__button {
+  width: 1em;
+  height: 1em;
   background: none;
   border: none;
   color: aliceblue;
@@ -73,11 +86,29 @@ align-items: center;
   line-height: 0;
 }
 
-.cartItem__button:hover{
+.cartItem__button:hover {
   cursor: pointer;
   background-color: aliceblue;
   border-radius: 50%;
   color: #282c34;
 }
 
+.cartItem__price{
+  display: flex;
+  justify-content: center;
+  flex: 2;
+}
 
+.cartItemDelete__button{
+  display: flex;
+  justify-content: center;
+  flex:1;
+  background: none;
+  border: none;
+  color: #ccc;
+}
+
+.cartItemDelete__button:hover{
+  cursor: pointer;
+  transform: scale(1.5);
+}
