--- a/src/components/ShoppingCart/ShoppingCart.css
+++ b/src/components/ShoppingCart/ShoppingCart.css
@@ -13,8 +13,10 @@
   width: 40%;
   position: sticky;
   top: 100px;
+  height: 80vh;
   align-self: flex-start;
   color: aliceblue;
+  overflow-y: auto;
 }
 
 .shoppingCart__h2 {
@@ -29,86 +31,25 @@
   font-weight: lighter;
 }
 
-.cartItem__row {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  margin: 1rem;
-  border-bottom: 1px solid #ccc;
-}
 
-.cartItem__info {
-  flex: 3;
-  flex-wrap: wrap;
-}
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #233545 #3c4043;
+  }
 
-.cartItem__buttons{
-  flex: 2;
-}
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 9px;
+  }
 
-.cartItem__buttons {
-  display: flex;
-  flex: 2;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
+  *::-webkit-scrollbar-track {
+    background: #3c4043;
+  }
 
-.cartItem__imageBox {
-  padding: 1rem;
-  flex: 2;
-}
-.cartItem__imageBox img {
-  width: 150px;
-  height: 150px;
-}
-
-.cartItem__qty {
-  width: 2rem;
-  height: 2rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 7px;
-  background-color: #282c34;
-  color: aliceblue;
-  text-align: center;
-  font-size: 1.2rem;
-}
-
-.cartItem__button {
-  width: 1em;
-  height: 1em;
-  background: none;
-  border: none;
-  color: aliceblue;
-  font-size: 2rem;
-  line-height: 0;
-}
-
-.cartItem__button:hover {
-  cursor: pointer;
-  background-color: aliceblue;
-  border-radius: 50%;
-  color: #282c34;
-}
-
-.cartItem__price{
-  display: flex;
-  justify-content: center;
-  flex: 2;
-}
-
-.cartItemDelete__button{
-  display: flex;
-  justify-content: center;
-  flex:1;
-  background: none;
-  border: none;
-  color: #ccc;
-}
-
-.cartItemDelete__button:hover{
-  cursor: pointer;
-  transform: scale(1.5);
-}
+  *::-webkit-scrollbar-thumb {
+    background-color: #233545;
+    border-radius: 0px;
+    border: 21px none #ffffff;
+  }
