--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%);
 }
 
-.container__main{
+.container__section{
   display: flex;
   justify-content: space-around;
   height: 100%;
