change css of products card

--- a/src/components/ItemCart/ItemCart.css
+++ b/src/components/ItemCart/ItemCart.css
@@ -40,7 +40,7 @@
     margin-right: 1rem;
     border: 1px solid #ccc;
     border-radius: 7px;
-    background-color: #282c34;
+    background-color: #1b0b21;
     color: aliceblue;
     text-align: center;
     font-size: 1.2rem;
