--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -5,18 +11,22 @@ body {
   /* background-color: #000000;
   background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%); */
   background-color: #1b0b21;
-background-image: linear-gradient(147deg, #000000 0%,  #1b0b21 54%);
+  background-image: linear-gradient(147deg, #000000 0%, #1b0b21 54%);
 }
 
-.container__section{
+.container__gallery {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
-  height: 100%;
+  /* height: 100%; */
+  width: 100%;
+  margin: 2rem;
   padding: 1rem;
 }
 
-
-.searchContainer__section{
+.searchContainer__section {
   display: flex;
   justify-content: center;
+  margin: 2rem 1rem;
+  padding-bottom: 2rem;
 }
