--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -53,33 +53,37 @@
   margin-right: 1rem;
 }
 
+.icons__li {
+  cursor: pointer;
+}
+
 .icons__li a {
   padding: 1rem;
   text-decoration: none;
   color: var(--light-color);
 }
 
-.numberItems[data-count]:after{
-  position:absolute;
-  right: 40px;
+.numberItems[data-count]:after {
+  position: absolute;
+  right: 25px;
   top: 43px;
   content: attr(data-count);
-  font-size:0.8em;
-  padding:0.6em 0.1em;
-  line-height:.75em;
+  font-size: 0.8em;
+  padding: 0.6em 0.1em;
+  line-height: 0.75em;
   color: aliceblue;
-  text-align:center;
-  min-width:2em;
-  font-weight:bold;
-  background: #DF0000;
+  text-align: center;
+  min-width: 2em;
+  font-weight: bold;
+  background: #df0000;
   border-radius: 50%;
 }
 
-.logo__div{
+.logo__div {
   margin-left: 1rem;
 }
 
-.logo__img{
+.logo__img {
   width: 75px;
   height: 75px;
   border-radius: 50%;
