--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -5,10 +5,14 @@
   padding-bottom: 2rem;
 }
 
+.search__form{
+width: 40%;
+}
+
 .search__box {
   display: flex;
-  height: 50px;
-  width: 600px;
+  height: 40px;
+  width: 100%;
   z-index:1;
   border-radius: 20px;
   background-color: #4158D0;
@@ -21,7 +25,7 @@
   z-index:-1;
   position: absolute;
   content:"";
-  width:600px;
+  width:100%;
   height:30px;
   left:10px;
   top:0;
@@ -33,11 +37,10 @@
   width: 100%;
   height: 100%;
   border: none;
-  border-radius: 10px;
+  border-radius: 20px;
   outline: none;
-  /* background: #fff; */
   background-color: #0b090a;
-  font-size: 1.3rem;
+  font-size: 1rem;
   padding: 0 1.5rem 0 1rem;
   color: aliceblue;
 }
@@ -48,12 +51,12 @@
 
 .search__button {
   position: absolute;
-  height: 40px;
-  width: 40px;
+  height: 35px;
+  width: 35px;
   border: none;
   background: none;
-  transform: translateX(550px);
-  line-height: 75px;
+  right: 7px;
+  line-height: 55px;
   color: #57025e;
   cursor: pointer;
 }
