--- a/src/components/ShoppingCart/ShoppingCart.css
+++ b/src/components/ShoppingCart/ShoppingCart.css
@@ -11,8 +11,12 @@
 .shoppingCart__container {
   height: 100%;
   width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   padding-top: 3rem;
-  align-self: flex-start;
+  padding-bottom: 2rem;
+
   color: aliceblue;
 }
 
