--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -5,8 +5,14 @@
   align-items: center;
   height: 100vh;
   width: 100%;
-  background-color: var(--backgroundColor);
-  background-image: var(--backgroundImage);
+  /* background-color: var(--backgroundColor);
+  background-image: var(--backgroundImage); */
+  background: rgb(200, 176, 176);
+  background: linear-gradient(
+    90deg,
+    rgba(200, 176, 176, 1) 0%,
+    rgba(105, 73, 112, 1) 100%
+  );
 }
 
 .form {
@@ -14,41 +20,88 @@
   width: 100%;
   max-width: 400px;
   width: 100%;
-  max-height: 600px;
+  max-height: 700px;
   height: 100%;
   border: 1px solid rgb(22, 22, 22);
   border-radius: 3rem;
 }
 
 .form-wrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding: 4rem;
+  height: 100%;
+  width: 100%;
+  padding: 4rem 4rem 0.5rem 4rem;
   border-radius: 3rem;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  -webkit-mask-image: linear-gradient(to top, transparent 5%, black 100%);
-  mask-image: linear-gradient(to top, transparent 5%, black 100%);
+  z-index: 0;
+}
+
+.form-wrapper::before {
+  position: absolute;
+  content: '';
+  top: 0;
+  right: 0;
+  left: 0;
   height: 100%;
   width: 100%;
+  -webkit-mask-image: linear-gradient(to bottom, transparent 5%, black 100%);
+  mask-image: linear-gradient(to bottom, transparent 5%, black 100%);
+  background-color: rgb(44, 42, 42);
+  border-radius: 3rem;
+  z-index: -1;
 }
 
 .form-group {
+  position: relative;
   display: block;
   font-size: 1.2rem;
 }
 
 .form input {
-  border: none;
   display: block;
+  width: 100%;
+  padding: 0 2rem;
+  margin-top: 2rem;
+  border: none;
+  border-bottom: 1px solid #595260;
+  background: none;
   line-height: 2;
   font-size: 16px;
-  width: 100%;
-  padding: 0 8px;
-  margin-bottom: 16px;
-  margin-top: 4px;
+  color: rgb(189, 193, 197);
+}
+
+.form-group .form-text,
+.form-text {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0;
+  padding: 0.3rem 0 2rem 0;
+  text-decoration: none;
+  font-size: 16px;
+  color: rgb(189, 193, 197);
+}
+
+.form-group .form-text:hover,
+.form-text a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.form input:active,
+.form input:focus,
+.form input:hover {
+  outline: none;
+  background: none;
+  border-bottom-color: aliceblue;
+}
+
+.form input::placeholder {
+  color: rgb(189, 193, 197);
 }
 
 .form input.error {
@@ -57,8 +110,41 @@
 
 .form .btn {
   width: 100%;
+  padding: 0.8rem;
+  border: none;
+  border-radius: 2rem;
+  background: rgb(201, 14, 166);
+  background: linear-gradient(
+    90deg,
+    rgba(201, 14, 166, 1) 0%,
+    rgba(105, 3, 103, 1) 100%
+  );
+  font-size: 1.3rem;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  color: aliceblue;
 }
 
-.login-icons{
-    position: absolute;
+.form .btn:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+.login-icons {
+  position: absolute;
+  top: 3px;
+  color: rgb(189, 193, 197);
+}
+
+.form-text {
+  justify-content: center;
+  margin-top: 3rem;
+  padding: 0;
+  color: rgb(189, 193, 197);
+}
+
+.form-text a {
+  text-decoration: none;
+  color: rgba(201, 14, 166, 1);
+  padding-left: 5px;
 }
