--- a/src/components/ShoppingCart/ShoppingCart.css
+++ b/src/components/ShoppingCart/ShoppingCart.css
@@ -13,10 +13,9 @@
   width: 60%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   padding-top: 3rem;
   padding-bottom: 2rem;
-
   color: aliceblue;
 }
 
@@ -28,8 +27,8 @@
 
 .listItems__container {
   margin: 1rem;
-  height: 70%;
-  overflow-y: scroll;
+  max-height: 70%;
+  overflow-y: auto;
 }
 
 /* ===== Scrollbar CSS ===== */
