--- a/src/index.css
+++ b/src/index.css
@@ -16,14 +16,15 @@ body {
   --backgroundImage: linear-gradient(147deg, #000000 0%, #1b0b21);
 }
 
-.shop__container{
+.shop__container {
   display: flex;
   flex-direction: column;
   background-color: var(--backgroundColor);
   background-image: var(--backgroundImage);
 }
 
-.cart__container, .error__section{
+.cart__container,
+.error__section {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -49,13 +50,41 @@ body {
   overflow: auto;
 }
 
-.detail__section{
+.detail__section {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   height: 100%;
-  background-color: var(--backgroundColor);
-  background-image: var(--backgroundImage);
+  box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.5);
+
+  /* Basic background styles */
+  background: url("./assets/img/gallery/pexels-aleksandar-pasaric-2078071.jpg")center center no-repeat;
+  background-size: cover;
+}
+
+/* .detail__section::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url("./assets/img/gallery/pexels-aleksandar-pasaric-2078071.jpg"),
+    black;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+  opacity: 0.85;
+  z-index: -3;
+} */
+
+.detail__container {
+  display: flex;
+  justify-content: space-around;
+  height: 100%;
+  padding: 3rem 8rem;
+  color: aliceblue;
 }
 
 .error-wrapper {
@@ -68,12 +97,12 @@ body {
   line-height: 1.4;
 }
 
-.notFound-404{
+.notFound-404 {
   height: 158px;
   line-height: 153px;
 }
 
-.notFound-h1{
+.notFound-h1 {
   margin: 0px;
   color: #222;
   font-size: 220px;
@@ -82,11 +111,11 @@ body {
   text-shadow: 2px 2px 0px aliceblue, -2px -2px 0px aliceblue;
 }
 
-.notFound-h1 >span {
+.notFound-h1 > span {
   text-shadow: 2px 2px 0px #8307b9, -2px -2px 0px #8307b9, 0px 0px 8px #550975;
 }
 
-.notFound-message{
+.notFound-message {
   margin-top: 1rem;
   margin-bottom: 1.5rem;
   color: #c9c9c9;
