--- a/src/components/AlbumDetail/AlbumDetail.css
+++ b/src/components/AlbumDetail/AlbumDetail.css
@@ -12,6 +12,7 @@
   text-transform: uppercase;
   font-size: 13px;
   letter-spacing: 0.1em;
+  
 }
 
 .album__cover {
@@ -19,11 +20,10 @@
   flex-direction: column;
   align-items: center;
   margin: 0 2rem;
-  /* width: 40%; */
+  width: 40%;
 }
 
 .album__coverImage {
-text-align: center;
   width: 100%;
   height: 100%;
   padding: 2rem;
@@ -31,20 +31,21 @@ text-align: center;
 }
 
 .album__coverImage img {
-  width: 600px;
-  height: 600px;
+  width: 100%;
+  height: 100%;
+  max-width: 450px;
+  max-height: 450px;
   -webkit-box-shadow: 8px 8px 34px 5px black;
   box-shadow: 8px 8px 34px 5px black;
 }
 
 .album__info {
   width: 100%;
-  margin-top: 2rem;
-  padding: 2rem;
+  padding: 1rem 2rem;
 }
 
 .album__title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-top: 2rem;
 }
 
@@ -64,16 +65,16 @@ text-align: center;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   font-family: var(--font-detail);
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 
 .album__price span {
-  font-size: 1.7rem;
+  font-size: 1.3rem;
 }
 
 .album__artist {
   padding-bottom: 0.7rem;
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-family: var(--font-detail);
   color: #cccccc;
 }
@@ -103,18 +104,18 @@ text-align: center;
 
 /*!MEDIUM DEVICES*/
 @media only screen and (max-width: 1300px) {
-  .album__coverImage img {
+  /* .album__coverImage img {
     width: 400px;
     height: 400px;
-  }
+  } */
 }
 
 /*!MEDIUM DEVICES*/
-@media only screen and (max-width: 1800px) {
-  .album__coverImage img {
+@media only screen and (max-width: 2000px) {
+  /* .album__coverImage img {
     width: 500px;
     height: 500px;
-  }
+  } */
 }
 
 /*!EXTRA LARGE DEVICES*/
