--- a/src/components/ShoppingCart/ShoppingCart.css
+++ b/src/components/ShoppingCart/ShoppingCart.css
@@ -20,9 +20,9 @@
 }
 
 .shoppingCart__h2 {
-  font-size: 2rem;
+  font-size: 20px;
   padding-left: 2rem;
-  padding-bottom: 2rem;
+  padding-bottom: 10px;
 }
 
 .listItems__container {
