--- a/src/components/SummaryCart/SummaryCart.css
+++ b/src/components/SummaryCart/SummaryCart.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 1.5rem;
+    margin: 0 1.5rem;
 }
 
 .cartSummary__p{
@@ -10,6 +10,6 @@
 }
 
 .cartSummary__qty,.cartSummary__price{
-    font-size: 1.3em;
+    font-size: 15px;
     font-weight: 700;
 }
