--- a/src/components/AlbumDetail/AlbumDetail.css
+++ b/src/components/AlbumDetail/AlbumDetail.css
@@ -10,9 +10,8 @@
   padding: 5px 10px;
   font-family: var(--font-detail);
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 8px;
   letter-spacing: 0.1em;
-  
 }
 
 .album__cover {
@@ -27,7 +26,6 @@
   width: 100%;
   height: 100%;
   padding: 2rem;
-
 }
 
 .album__coverImage img {
@@ -45,8 +43,8 @@
 }
 
 .album__title {
-  font-size: 1.5rem;
-  margin-top: 2rem;
+  font-size: 20px;
+  margin-top: 20px;
 }
 
 .album__title span {
@@ -62,8 +60,8 @@
 }
 
 .album__price {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-family: var(--font-detail);
   font-size: 1rem;
 }
@@ -74,7 +72,7 @@
 
 .album__artist {
   padding-bottom: 0.7rem;
-  font-size: 1rem;
+  font-size: 13px;
   font-family: var(--font-detail);
   color: #cccccc;
 }
@@ -90,13 +88,15 @@
 }
 
 .action__text{
-  margin-right: 1rem;
-  padding: 0.7rem 1.3rem;
+  margin-right: 10px;
+  padding: 7px 13px;
   border: 1px solid #6e0469;
   border-radius: 99em;
   background-color: #6e0469;
   font-family: var(--font-detail);
+  font-size: 10px;
 }
+
 
 /*!SMALL DEVICES MEDIA QUERIES */
 @media only screen and (max-width: 963px) {
