--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Questrial");
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
 
 :root {
   --font-family: "Montserrat", sans-serif;
   --font-card: "Questrial", sans-serif;
+  --font-add: 'Concert One', cursive;
 }
 
 * {
@@ -141,4 +143,59 @@
   cursor: pointer;
   transform: scale(1.1);
   transition: "all 1s";
+}
+
+.card__text-added {
+  position: absolute;
+  padding: 10px;
+  right: 15px;
+  top: 15px;
+  background-color: white;
+  border-radius: 50%;
+  color: black;
+  font-weight: 800;
+  font-family: var(--font-add);
+  transform: rotate(15deg);
+  z-index: 10;
+}
+
+.circle-sketch-highlight{
+  position:relative;
+}
+
+.circle-sketch-highlight:before{
+  content:"";
+  z-index:-1;
+  left:-0.5em;
+  top:-0.1em;
+  border-width:2px;
+  border-style:solid;
+  border-color:red;
+  position:absolute;
+  border-right-color:transparent;
+  width:100%;
+  height:1em;
+  transform:rotate(2deg);
+  opacity:0.7;
+  border-radius:50%;
+  padding:0.1em 0.25em;
+}
+
+.circle-sketch-highlight:after{
+  content:"";
+  z-index:-1;
+  left:-0.5em;
+  top:0.1em;
+  padding:0.1em 0.25em;
+  border-width:2px;
+  border-style:solid;
+  border-color:red;
+  border-left-color:transparent;
+  border-top-color:transparent;
+  position:absolute;
+  width:100%;
+  height:1em;
+  transform:rotate(-1deg);
+  opacity:0.7;
+  border-radius:50%;
 }
