--- a/src/components/ButtonsGroup/ButtonsGroup.css
+++ b/src/components/ButtonsGroup/ButtonsGroup.css
@@ -1,6 +1,7 @@
 .buttons__container{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     padding: 2rem 1rem 0 1rem;
 }
