--- a/src/components/ShoppingCart/ShoppingCart.css
+++ b/src/components/ShoppingCart/ShoppingCart.css
@@ -10,25 +10,24 @@
 
 .shoppingCart__container {
   height: 100%;
-  width: 60%;
+  width: 80%;
   display: flex;
-  flex-direction: column;
-  /* justify-content: space-around; */
-  padding-top: 3rem;
-  padding-bottom: 2rem;
+  padding: 20px;
   color: aliceblue;
 }
 
 .shoppingCart__h2 {
   font-size: 20px;
-  padding-left: 2rem;
-  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-bottom: 30px;
 }
 
 .listItems__container {
-  margin: 1rem;
-  max-height: 70%;
-  overflow-y: auto;
+  margin: 20px;
+  margin-right: 50px;
+  width: 70%;
+  /* max-height: 80%; */
+  /* overflow-y: auto; */
 }
 
 /* ===== Scrollbar CSS ===== */
