--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,17 @@ body {
   overflow: auto;
 }
 
+.wishList__container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: var(--backgroundColor);
+  background-image: var(--backgroundImage);
+}
+
 .container__cart {
   display: flex;
   justify-content: center;
@@ -55,29 +66,13 @@ body {
   flex-direction: column;
   min-height: 100vh;
   height: 100%;
-  box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.5);
+  box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.5);
 
   /* Basic background styles */
-  background: url("./assets/img/gallery/pexels-aleksandar-pasaric-2078071.jpg")center center no-repeat;
+  background: url("./assets/img/gallery/pexels-aleksandar-pasaric-2078071.jpg")
+    center center no-repeat;
   background-size: cover;
 }
-
-/* .detail__section::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: url("./assets/img/gallery/pexels-aleksandar-pasaric-2078071.jpg"),
-    black;
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-size: cover;
-  opacity: 0.85;
-  z-index: -3;
-} */
 
 .detail__container {
   display: flex;
@@ -121,4 +116,11 @@ body {
   color: #c9c9c9;
   font-weight: 400;
   font-size: 16px;
+}
+
+.wishList__container {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--backgroundColor);
+  background-image: var(--backgroundImage);
 }
