--- a/src/components/FavCard/FavCard.css
+++ b/src/components/FavCard/FavCard.css
@@ -1,5 +1,5 @@
 .favCard__container {
-    position: relative;
+  position: relative;
   width: 300px;
   height: 300px;
 }
@@ -13,13 +13,18 @@
 .favCard__container img {
   height: 250px;
   width: 250px;
+  cursor: pointer;
+}
+
+.favCard__container img:hover {
+  opacity: 0.7;
 }
 
 .favCard__title {
   padding: 20px 10px 10px 0px;
 }
 
-.fav-btn{
-    position: absolute;
-    padding: 5px;
+.fav-btn {
+  position: absolute;
+  padding: 5px;
 }
