--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,35 +1,44 @@
 .searchContainer__section {
   display: flex;
   justify-content: center;
-  margin: 2rem 1rem;
-  padding-bottom: 2rem;
+  margin: 30px 10px 10px 10px;
 }
 
-.search__form{
-width: 40%;
+.search__form {
+  width: 40%;
 }
 
 .search__box {
   display: flex;
   height: 40px;
   width: 100%;
-  z-index:1;
+  z-index: 1;
   border-radius: 20px;
-  background-color: #4158D0;
-  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%); 
-  margin-right:25px;
+  background-color: #4158d0;
+  background-image: linear-gradient(
+    43deg,
+    #4158d0 0%,
+    #c850c0 46%,
+    #ffcc70 100%
+  );
+  margin-right: 25px;
   filter: brightness(120%);
 }
 
-.search__box:before{
-  z-index:-1;
+.search__box:before {
+  z-index: -1;
   position: absolute;
-  content:"";
-  width:100%;
-  height:30px;
-  left:10px;
-  top:0;
-  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%); 
+  content: "";
+  width: 100%;
+  height: 30px;
+  left: 10px;
+  top: 0;
+  background-image: linear-gradient(
+    43deg,
+    #4158d0 0%,
+    #c850c0 46%,
+    #ffcc70 100%
+  );
   filter: blur(20px);
 }
 
@@ -45,8 +54,8 @@ width: 40%;
   color: aliceblue;
 }
 
-.search__input:focus{
-  border:1px solid rgb(39, 38, 38)
+.search__input:focus {
+  border: 1px solid rgb(39, 38, 38);
 }
 
 .search__button {
