--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -114,6 +114,7 @@
   border-radius: 20px;
   background-color: #290232;
   overflow-y: auto;
+  z-index: 100;
 }
 
 .navbar__cart::-webkit-scrollbar {
