--- a/src/components/PurchaseForm/PurchaseForm.css
+++ b/src/components/PurchaseForm/PurchaseForm.css
@@ -16,13 +16,21 @@
   margin-left: 10px;
 }
 
-.form-wrapper {
+.form-checkout__wrapper {
   margin: 10px;
   position: relative;
+}
+
+.form-checkout__wrapper::before {
+  background: none;
 }
 
 .form-buttonProgress {
   position: absolute;
   top: 50%;
   left: 50%;
+}
+
+.form-checkout__wrapper input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px rgb(30, 1, 39) inset;
 }
