--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -37,3 +37,15 @@
 .modal-button:hover {
   transform: scale(1.1);
 }
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.modal-content::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.modal-content {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
