--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap");
 
 :root {
   --font-family: "Montserrat", sans-serif;
@@ -73,7 +74,8 @@
   cursor: pointer;
 }
 
-.icons__li a, .icons__li button {
+.icons__li a,
+.icons__li button {
   border: none;
   background: none;
   color: aliceblue;
@@ -111,7 +113,11 @@
 }
 
 .navbar__user-text {
-  padding-right: 20px;
+  font-family: "Caveat", cursive;
+  color: #e72db2;
+  font-weight: 700;
+  padding-right: 10px;
+  font-size: 30px;
 }
 
 .navbar__cart {
