--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,15 @@ body {
   overflow: auto;
 }
 
+.profile__container {
+  display: flex;
+  justify-content: flex-start;
+  min-height: 90vh;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+}
+
 .detail__container {
   padding: 3rem 8rem;
   color: aliceblue;
@@ -109,7 +118,7 @@ body {
   font-size: 16px;
 }
 
-.contact-image{
+.contact-image {
   height: 400px;
   width: 400px;
 }
