--- a/src/index.css
+++ b/src/index.css
@@ -121,32 +121,31 @@ body {
   width: 400px;
 }
 
-.logo-img{
+.logo-img {
   position: absolute;
   left: 30px;
-  top:30px;
+  top: 30px;
   width: 150px;
 }
 
 /*!SMALL DEVICES MEDIA QUERIES */
-@media only screen and (max-width: 360px) {
-
+@media only screen and (min-width: 360px) {
 }
 
 /*!TABLETS DEVICES*/
-@media only screen and (max-width: 601px) {
-  .logo-img{
+@media only screen and (min-width: 601px) {
+  .logo-img {
     left: 20px;
-    top:20px;
+    top: 20px;
     width: 150px;
   }
 }
 
 /*!DESKTOP DEVICES*/
-@media only screen and (max-width: 1024px) {
-  .logo-img{
+@media only screen and (min-width: 1024px) {
+  .logo-img {
     left: 100px;
-    top:50px;
+    top: 50px;
     width: 200px;
   }
 }
